force-app/main/default/objects/Electronics__c/Electronics__c.object-meta.xml
<CustomObject>
    <label>Electronics</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>ENo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Electronics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>