force-app/main/default/objects/Electronics__c/fields/Deal_Price__c.field-meta.xml
<CustomField>
    <fullName>Deal_Price__c</fullName>
    <label>Deal Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>