force-app/main/default/objects/Electronics__c/fields/Deal_Till__c.field-meta.xml
<CustomField>
    <fullName>Deal_Till__c</fullName>
    <description>Contains the Offer End Date and Time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal Till</label>
    <type>DateTime</type>
</CustomField>