force-app/main/default/objects/Electronics__c/fields/Deal_URL__c.field-meta.xml
<CustomField>
    <fullName>Deal_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal URL</label>
    <type>Url</type>
</CustomField>