force-app/main/default/objects/Electronics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Brand__c</columns>
    <columns>Category__c</columns>
    <columns>Original_Price__c</columns>
    <columns>Deal_Price__c</columns>
    <columns>Deal_Till__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>